--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/umi.e7f5ddff.css" />
+    <link rel="stylesheet" href="/zp-design/umi.e7f5ddff.css" />
     <script>
       window.routerBase = "/zp-design";
     </script>
@@ -29,6 +29,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/umi.78c70b3b.js"></script>
+    <script src="/zp-design/umi.78c70b3b.js"></script>
   </body>
 </html>
